--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,4 @@
-/* --------------------------------- */
-/* Css Styles                        */
-/*---------------------------------- */
-
-/**
-	Cloud - Cloud Freelancer & Agency Portfolio Template
-	Author : TavillaThemes
-	Copyright 2017
-
-/* Table of Content
-==================================================
-	
-	1. Body and Core Css
-	2. Header
-    3. Home Section
-    4. About
-    5. Portfolio
-    6. Portfolio Detail
-    7. Team
-    8. Blog
-    9. Clients
-    10. Contact
-    11. Footer
-    12. Responsive
-
-
-/*------------------------ 1 Body and Core Css ------------------------*/		
+/*------------------------  Body and Core Css ------------------------*/		
 
 body{
 	font-family: 'Poppins', sans-serif;
@@ -169,7 +143,7 @@ font-weight: lighter!important;
 /* Typoghraphy */ 
 
 p{
-    font-size: 15px;
+    font-size: 18px;
     color: #949494;
     line-height: 28px;
     font-family: 'Poppins', sans-serif;
@@ -255,7 +229,7 @@ h6{
 }
 
 
-/*------------------------ 2 Header ------------------------*/	
+/*------------------------ Header ------------------------*/	
 
 .navbar.radius-nav {
     background: #fff;
@@ -628,7 +602,7 @@ header .navbar.full-nav.white .social-icons a:hover{
 }
 
 
-/*------------------------ 3 Home Pages ------------------------*/
+/*------------------------ Home Pages ------------------------*/
 
 
 .home.type-1 {
@@ -639,39 +613,6 @@ header .navbar.full-nav.white .social-icons a:hover{
     z-index: -1;
     background-attachment: fixed;
     background-position: 50% 50%;
-}
-
-.home.type-2 {
-    background: url(../images/home-2.jpg) bottom center;
-    width: 100%;
-    display: table;
-    position: relative;
-    z-index: -1;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: 50% 50%;
-}
-
-.home.type-3 {
-    background: url(../images/home-4.jpg) bottom center;
-    width: 100%;
-    display: table;
-    position: relative;
-    z-index: -1;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: 50% 50%;
-}
-
-.home.type-3:before{    
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 1;
 }
 
 .hometop {
@@ -935,35 +876,10 @@ header .navbar.full-nav.white .social-icons a:hover{
 }
 
 
-/* Type 2 */
-
-.about.type-2 .text{
-    font-size: 16px;
-    color: #000;
-    font-weight: 500;
-}
 
 
-/* Vertiqal */
 
-.about.type-1.vertiqal .about-text p {
-    margin-top: 20px;
-    padding-left: 0px;
-}
-
-.about-content .about-image img{
-    width: 100%;
-}
-
-.about-content p.text{
-    font-size: 16px;
-    color: #000;
-    font-weight: 500;
-    text-align: center;
-}
-
-
-/*------------------------ 5 Portfolio ------------------------*/
+/*------------------------  Portfolio ------------------------*/
 
 
 .single-item figure img {
@@ -1294,582 +1210,8 @@ header .navbar.full-nav.white .social-icons a:hover{
 }
 
 
-/*------------------------ 6 Portfolio Detail ------------------------*/
 
-
-.port-list li span{
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 16px;
-}
-
-.port-list li {
-    margin-bottom: 15px;
-    line-height: 13px;
-}
-
-.port-list li p{
-    font-size: 13px;
-}
-
-.port-subtitle{
-    line-height: 28px;
-}
-
-.slide img{
-    width: 100%;
-}
-
-.potfolio-content.type-1 .port-slider img{
-    width: 100%;
-}
-
-.owl-pagination{
-    margin-top: 30px;
-}
-
-.article-nav{
-    border-top: 1px solid #efefef;   
-    padding: 46px 0 50px;
-}
-
-
-.article-nav a.prev,
-.article-nav a.next{
-    color: #000;
-    font-weight: 600;
-    position: relative;
-    cursor: pointer;
-}
-
-.article-nav .prev span,
-.article-nav .next span{
-    color: #b3b3b3;
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 4px;
-    margin-bottom: 3px;
-    display: inline-block;
-    transition: all ease 0.1s; 
-}
-
-.article-nav a.prev:hover > span,
-.article-nav a.next:hover > span{
-    transition: all ease 0.3s; 
-}
-
-.article-nav .next span{
-    float: right;
-}
-
-.article-nav .backtoport{
-    margin: 0 auto;
-    display: table;
-    opacity: 0.3;
-    cursor: pointer;
-    transition: all ease 0.3s;
-}
-
-.article-nav .backtoport:hover{
-    opacity: 1;
-    transition: all ease 0.3s;
-}
-
-.potfolio-content.type-2 .port-list{
-    margin-top: 10px;
-}
-
-.potfolio-content.type-2 .port-list li{
-    margin-bottom: 26px;
-}
-
-.content-image img{
-    width: 100%;
-}
-
-.phone{
-    background: url(../images/mobile/phone.png) no-repeat;
-    background-size: auto 100%;
-    background-position: top center;
-}
-
-.phone img{
-    width: 100%;
-    padding: 21% 13% 24%;
-}
-
-.phone .owl-controls{
-    position: absolute;
-    text-align: center;
-    left: 50%;
-    margin-left: -39px;
-}
-
-.work-information{
-    background: #f2f2f2;
-    padding: 80px 0;
-    font-size: 14.5px;
-    line-height: 26px;
-}
-
-.work-information .part span{
-    color:#748182;
-}
-
-
-
-/*------------------------ 7 Team ------------------------*/
-
-
-.team .our-team .team-friend  {
-    display: inline-block;
-}
-
-.team .our-team .team-friend figure {
-  position: relative;
-  float: left;
-  overflow: hidden;
-  width: 100%;
-  color: #000;
-  text-align: left;
-  font-size: 16px;
-  background-color: #fff;
-  margin-bottom: 30px;
-}
-
-.team .our-team .team-friend figure *{
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-}
-
-.team .our-team .team-friend img {
-  width: 100%;
-  backface-visibility: hidden;
-  vertical-align: top;
-}
-
-.team .our-team .team-friend figure:after,
-.team .our-team .team-friend figure figcaption {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.team .our-team .team-friend figure:after {
-  content: '';
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-  opacity: 0;
-}
-
-.team .our-team .team-friend figure:hover img {
-  zoom: 1;
-  filter: alpha(opacity=50);
-  -webkit-opacity: 0.5;
-  opacity: 0.5;
-  -moz-transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-.team .our-team .team-friend figure:hover:after{
-  opacity: 1;
-  position: absolute;
-}
-
-.team .our-team .team-friend figure figcaption {
-    z-index: 1;
-    padding-left: 27px;
-    padding-top: 47%;
-    opacity: 1;
-    width: 100%;
-    padding: 0;
-} 
-
-.team .our-team .team-friend figure figcaption .teaminf h3{
-    font-size: 22px;
-    color: #fff;
-    clear: both;
-}
-
-
-.team .our-team .team-friend figure figcaption .teaminf p{
-    font-size: 12px;
-    line-height: 24px;
-    color: #fff;
-    clear: both;
-}
-
-.team .our-team .team-friend figure figcaption .teaminf {
-    bottom: 0;
-    padding-bottom: 19px;
-    padding-left: 23px;
-    position: absolute;
-    opacity: 0;
-    -webkit-transform: translateX(-80px);
-    transform: translateX(-80px);
-}
-
-.team .our-team .team-friend figure figcaption:hover > .teaminf{
-  -webkit-transform: translate(0px, 0px);
-  transform: translate(0px, 0px);
-  opacity: 1;
-}
-
-.team .our-team .team-friend figure figcaption .teaminf .social-icons {
-    padding-bottom: 7px;  
-    background: none;  
-    padding: 0;
-    margin-left: 0;
-    margin-bottom: 12px;
-}
-
-.team .our-team .team-friend figure figcaption .teaminf .social-icons a{
-    color: #fff;
-}
-
-.team .our-team .team-friend figure figcaption .teaminf .social-icons a:hover{
-    color: #fff !important;
-}
-
-
-
-/*------------------------ 8 Blog ------------------------*/
-
-
-.blog.type-1 .blog-big .image img{
-    width: 100%;
-}
-
-.blog.type-1 .blog-big .image{
-    position: relative;
-    display: table;
-    width: 100%;
-}
-
-.blog.type-1 .blog-big .image .icon{
-    position: absolute;
-    left: 0;
-    right: 0;
-    text-align: center;
-    opacity: 0;
-    display: table-cell;
-    vertical-align: middle;
-    top: 50%;
-    margin-top: -20px;
-}
-
-.blog.type-1 .blog-big:hover .image .icon{
-    opacity: 0.9;
-    transition: all ease 0.3s;
-}
-
-.blog.type-1 .blog-big .image .icon i{
-    color: #fff;
-    padding: 17px 0 16px;
-    min-width: 50px;
-    border-radius: 50px;
-    text-align: center;
-    transition: all ease 0.3s;
-    text-align: center;
-}
-
-.blog.type-1 .blog-big .text h2{
-    font-size: 18px;
-    letter-spacing: 0;
-    line-height: 27px;
-    padding: 30px 0 15px;
-    color: #000;
-}
-
-.blog.type-1 .blog-big .text p{
-    font-size: 13px;
-    line-height: 26px;
-}
-
-.blog.type-1 .blog-big .text .info{
-    color: #bdbdbd;
-    font-size: 11px;
-    margin-top: 20px;    
-    font-weight: 500;
-}
-
-.blog.type-1 .blog-list ul{
-    margin-top: 15px;
-}
-
-.blog.type-1 .blog-list ul li .image{
-    position: relative;
-}
-
-.blog.type-1 .blog-list ul li .image .icon{
-    position: absolute;
-    left: 0;
-    right: 0;
-    text-align: center;
-    opacity: 0;
-    top: 50%;
-    margin-top: -20px;
-    margin-left: -34px;
-}
-
-.blog.type-1 .blog-list ul li .image .icon i{
-    position: absolute;
-    color: #fff;
-    padding: 11px 0 9px;
-    min-width: 37px;
-    border-radius: 50px;
-    text-align: center;
-    transition: all ease 0.3s;
-}
-
-.blog.type-1 .blog-list ul li:hover .image .icon{
-    opacity: 0.9;
-    transition: all ease 0.3s;
-}
-
-.blog.type-1 .blog-list ul li .image img{
-    width: 100%;
-}
-
-.blog.type-1 .blog-list ul li{
-    padding: 36px 0;
-    border-bottom: 1px solid #efefef;
-}
-
-.blog.type-1 .blog-list .text{
-    padding-top: 11px;
-}
-
-.blog.type-1 .blog-list .text h2{
-    font-size: 14px;
-    letter-spacing: 0;
-    line-height: 21px;
-    color: #000;
-    font-weight: 500;
-    margin-top: 6px;
-}
-
-.blog.type-1 .blog-list .text p{
-    font-size: 13px;
-    line-height: 26px;
-}
-
-.blog.type-1 .blog-list .text .info{
-    color: #bdbdbd;
-    font-size: 11px;    
-    font-weight: 500;
-}
-
-.blog.type-1 .more{
-    margin: 60px 30px;
-}
-
-.blog.type-1.standart .blog-big .text h2 {
-    padding: 10px 0 15px;
-}
-
-.blog.type-1.standart .blog-big .text .info {
-    margin: 28px 0 3px;
-    font-size: 12px;
-}
-
-.blogs a{
-    display: inline-block;
-}
-
-#preloader {
-    background-color:#fff;
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%; 
-    z-index: 1000;
-    display:table;
-    text-align: center;
-}
-
-
-@keyframes spinner {
-  to {transform: rotate(360deg);}
-}
- 
-.spinner:before {
-  content: '';
-  box-sizing: border-box;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 30px;
-  height: 30px;
-  margin-top: -15px;
-  margin-left: -15px;
-  border-radius: 50%;
-  border: 1px solid #ccc;
-  animation: spinner .6s linear infinite;
-}
-
-.blog-single.type-1 .article .blog-image img{
-    width: 100%;
-}
-
-.blog-single.type-1 .article .info{
-    color: #bdbdbd;
-    font-size: 12px;
-    font-weight: 500;
-    margin-top: 15px;
-}
-
-.blog-single .blog-image img{
-    width: 100%;
-}
-
-blockquote {
-    padding: 15px 18px;
-    margin: 25px 0;
-    font-weight: 600;
-    letter-spacing: -1px;
-    font-size: 18px;
-    line-height: 30px;
-    border-left: solid 3px;
-}
-
-.author .image img{
-    width: 100%;
-}
-
-.author{    
-    border-top: solid 1px #dfdfdf;
-    border-bottom: solid 1px #dfdfdf;    
-    padding: 45px 0px;
-}
-
-.author h6{
-    font-size: 18px;
-    margin-top: 23px;   
-}
-
-.author p{
-    font-size: 13px;
-    line-height: 24px;
-    padding: 10px 0 8px;
-}
-
-.author .social-icons a{
-    color: #cbcbcb;
-    font-size: 12px;
-    margin-right: 0px;
-    width: 20px;
-}
-
-.comment{
-    border-bottom: solid 1px #dfdfdf;
-    padding: 45px 0px;
-}
-
-.comment.reply{
-    padding-left: 45px;
-}
-
-.comment .image img{
-    width: 100%;
-}
-
-.comment h6{
-    font-size: 18px;
-}
-
-.comment span{
-    font-size: 12px;
-    color: #748182;
-    padding: 12px 0;
-    display: inline-block;
-}
-
-.comment p{
-    font-size: 13px;
-    line-height: 24px;
-}
-
-.comment .reply{
-    font-size: 13px;
-    margin-top: 20px;
-    display: inline-block;
-}
-
-.sidebar .widget.categories ul li{
-    font-size: 14px;
-    border-bottom: solid 1px #dfdfdf;
-    padding: 13px 0;
-    font-weight: 500;
-}
-
-.sidebar .widget.categories ul li a{
-    width: 100%;
-    display: inline-block;
-    color: #000;
-}
-
-.sidebar .widget.categories ul li span{
-    font-size: 14px;
-    font-weight: 400;
-    color: #b7b7b7;
-    float: right;
-}
-
-.sidebar .widget.latest ul li h6{
-    font-size: 15px;
-    letter-spacing: 0;
-    line-height: 24px;
-}
-
-.sidebar .widget.latest ul li .info{
-    font-size: 11px;
-    margin-bottom: 8px;
-}
-
-.sidebar .widget.latest ul li{
-    border-bottom: solid 1px #dfdfdf;
-    padding: 30px 0;
-}
-
-.sidebar .widget.advertisement .page-title.sub{
-    margin-bottom:20px;
-}
-
-.sidebar .widget.advertisement .image img{
-    width: 100%;
-}
-
-
-/*------------------------ 9 Clients ------------------------*/
-
-.clients .client-logo {
-    display: table;
-    height: 200px;
-}
-
-.clients .client-logo span{
-    display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-    opacity: 1;
-    transition: all ease 0.3s;
-}
-
-.clients .client-logo span img{
-    max-width: 80%;
-    max-height: 50%;
-}
-
-
-
-/*------------------------ 10 Contact ------------------------*/
+/*------------------------ Contact ------------------------*/
 
 .contact.type-1 .contact-info ul li{
     line-height: 36px;
@@ -2038,7 +1380,7 @@ blockquote {
 }  
 
 
-/*------------------------ 11 Footer ------------------------*/
+/*------------------------  Footer ------------------------*/
 
 .bottom-info{
     text-align: center;
@@ -2682,7 +2024,7 @@ footer.type-2 .footer-bottom .social-icons a{
 #skill_sec{
     position: relative;
     margin: 6% 0 6% 18%;
-    width: 70%;
+    width: 65%;
 }
 
 .skills-wrap {
