--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ ul {
     text-transform: uppercase;
 }
 .home-intro .intro-content .intro-caption h2 {
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 900;
     background: -webkit-linear-gradient(right, #d61a5e, #ff8c05);
     -webkit-background-clip: text;
@@ -241,7 +241,7 @@ ul {
     margin-bottom: 30px;
 }
 .about .content-right {
-    background: url(../images/about.png);
+    background: url(../images/about.jpeg);
     background-size: cover;
     background-position: 50% 100%;
     height: 100%;
